# freya_data2excel

./: .gitignore  Cargo.toml
resources/windows/: res.rc
src/: app_view.rs  bosa.rs  check_pn_type.rs  check_version.rs  data2excel.rs  error.rs  main.rs  updata.rs  utils.rs
