[package]
name = "freya_data2excel"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freya = {git = "https://github.com/marc2332/freya.git",features = ["hot-reload"]}
dioxus = { version = "0.5", features = ["macro", "hooks"], default-features = false }
tokio = { version = "1.37.0", features = ["full"] }
tiberius={version="0.12.2",features = ["chrono","tds73"],default-features = false}
chrono = { version = "0.4.31", default-features = false}
tokio-util = { version = "0.7.10", default-features = false, features = [
    "net",
    "compat",
] }
rust_xlsxwriter = "0.64.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
retry = { version = "^2.0.0" }
anyhow = "1"
thiserror = "1"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
strip = true